src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Client Sales Fast-Track Process</fullName>
        <description>This is a simplified version of the regular sales process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Re-Assessment - Approved</fullName>
        </values>
        <values>
            <fullName>Re-Assessment - Completed</fullName>
        </values>
        <values>
            <fullName>Re-Assessment - Declined</fullName>
        </values>
        <values>
            <fullName>Re-Assessment - F%2FU with PC%2FFacility</fullName>
        </values>
        <values>
            <fullName>Re-Assessment - File Sent for EFT</fullName>
        </values>
        <values>
            <fullName>Re-Assessment - In Progress</fullName>
        </values>
        <values>
            <fullName>TESTING</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Client Sales Process</fullName>
        <description>This process tracks the stages for the customer sales process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Assessor</fullName>
        </values>
        <values>
            <fullName>Closed No Loan</fullName>
        </values>
        <values>
            <fullName>Closed With Loan</fullName>
        </values>
        <values>
            <fullName>Intake</fullName>
        </values>
        <values>
            <fullName>Loan Approved</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Re-Assessment</fullName>
        </values>
        <values>
            <fullName>TESTING</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Law Firm Engagement</fullName>
        <description>This sales process tracks the stages of the new law firm engagement process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Developing</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>TESTING</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AC_ContactAnomaly__c</fullName>
        <formula>Primary_Contact__r.AccountId != AccountId
&amp;&amp; !ISBLANK(AccountId)
&amp;&amp; !ISBLANK(Primary_Contact__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AC_ContactAnomaly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AC_Recalc__c</fullName>
        <inlineHelpText>This is an internal field which is bumped whenever the Account&apos;s province of residency changes, triggering a recalculation of the Scenario.</inlineHelpText>
        <label>AC_Recalc</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>APR_1__c</fullName>
        <formula>25.44</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>APR #1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APR_2__c</fullName>
        <label>APR #2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Accident_Location_from_W2L__c</fullName>
        <label>Accident Location from W2L</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alberta</fullName>
                </value>
                <value>
                    <fullName>British Columbia</fullName>
                </value>
                <value>
                    <fullName>Ontario</fullName>
                </value>
                <value>
                    <fullName>Manitoba</fullName>
                </value>
                <value>
                    <fullName>New Brunswick</fullName>
                </value>
                <value>
                    <fullName>Northwest Territories</fullName>
                </value>
                <value>
                    <fullName>Nova Scotia</fullName>
                </value>
                <value>
                    <fullName>Nunavut</fullName>
                </value>
                <value>
                    <fullName>Prince Edward Island</fullName>
                </value>
                <value>
                    <fullName>Quebec</fullName>
                </value>
                <value>
                    <fullName>Saskatchewan</fullName>
                </value>
                <value>
                    <fullName>Yukon Territory</fullName>
                </value>
                <value>
                    <fullName>Newfoundland &amp; Labrador</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <formula>TEXT( Account.Account_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Added_Reminder_to_Team_Calendar__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Added Reminder to Team Calendar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Notes__c</fullName>
        <label>Additional Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Lender Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Admin_Fee_Roll_up__c</fullName>
        <label>Admin Fee Roll-up</label>
        <summarizedField>Drawdown__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Drawdown__c.Payment_Method__c</field>
            <operation>equals</operation>
            <value>Admin Fee</value>
        </summaryFilterItems>
        <summaryForeignKey>Drawdown__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Admin_Fee__c</fullName>
        <label>Admin Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Admin_Fee_as_of_To_Date__c</fullName>
        <inlineHelpText>Admin Fees as they were on the To date of the reporting period.</inlineHelpText>
        <label>Admin Fee as of To Date</label>
        <summarizedField>Drawdown__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Drawdown__c.Payment_Method__c</field>
            <operation>equals</operation>
            <value>Admin Fee</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Drawdown__c.Include_in_Portfolio_Reports__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Drawdown__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Administration_Fee_Received__c</fullName>
        <label>Administration Fee Received</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amendment_Date__c</fullName>
        <label>Amendment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Amount_Paid_to_Borrower__c</fullName>
        <label>Amount Paid to Borrower</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_to_existing_lender__c</fullName>
        <label>Amount to existing lender</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Applicant_Full_Address__c</fullName>
        <formula>Applicant__r.MailingStreet + &apos;, &apos; +  Applicant__r.MailingCity + &apos;, &apos; + Applicant__r.MailingState + &apos; &apos; + Applicant__r.MailingPostalCode</formula>
        <label>Client Full Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_Name__c</fullName>
        <formula>Applicant__r.FirstName + &apos; &apos; +  Applicant__r.LastName</formula>
        <label>Client Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Client)</relationshipLabel>
        <relationshipName>Opportunities_Client</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attorney_Full_Address__c</fullName>
        <formula>Lawyer__r.MailingStreet + &apos;, &apos; +  Lawyer__r.MailingCity + &apos;, &apos; +  Lawyer__r.MailingState + &apos;, &apos; + Lawyer__r.MailingPostalCode</formula>
        <label>Lawyer Full Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attorney_Law_Firm__c</fullName>
        <formula>Lawyer__r.Account.Name</formula>
        <label>Client Law Firm</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attorney_Name__c</fullName>
        <formula>Lawyer__r.FirstName + &apos; &apos; +  Lawyer__r.LastName</formula>
        <label>Clients Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BIA_Information__c</fullName>
        <label>BIA Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Bankruptcy_Details__c</fullName>
        <label>Bankruptcy Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bankruptcy_on_File__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bankruptcy on File</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_Opportuniy_Notes__c</fullName>
        <label>Client / Opportuniy Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compounding_Interest__c</fullName>
        <label>Interest Compounding Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Interest_Compounding_Period__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Semi-Annual</fullName>
                </value>
                <value>
                    <fullName>Annual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Conga_Doc_Error__c</fullName>
        <formula>&quot;The Loan Document can not be generated.\\nPlease review the following fields and then click the [ButtonName] button again:&quot;
&amp;IF(ISPICKVAL(Type_of_Loan__c,&quot;&quot;), &quot;\\nType of Loan&quot;,&quot;&quot;)
&amp;IF(ISPICKVAL(Account.ProvinceResidency__c,&quot;&quot;),&quot;\\nProvince of Residency&quot;,&quot;&quot;)
&amp;IF(ISBLANK(Name),&quot;\\nOpportunity Name&quot;,&quot;&quot;)
&amp;IF(ISBLANK(Amount),&quot;\\nLoan Amount&quot;,&quot;&quot;)
&amp;IF(ISBLANK(APR_1__c),&quot;\\nAPR 1&quot;,&quot;&quot;)
&amp;IF(ISBLANK(APR_2__c),&quot;\\nAPR 2&quot;,&quot;&quot;)
&amp;IF(ISBLANK(Style_of_Cause_Description__c),&quot;\\nStyle of Cause Description&quot;,&quot;&quot;)
&amp;IF(ISBLANK(Name_of_Court__c),&quot;\\nName of Court&quot;,&quot;&quot;)
&amp;IF(ISBLANK(Court_File_No__c),&quot;\\nCourt File No&quot;,&quot;&quot;)
&amp;IF(ISBLANK(Admin_Fee__c),&quot;\\nAdmin Fee&quot;,&quot;&quot;)
&amp;IF(ISBLANK(Law_Firm__c),&quot;\\nLaw Firm&quot;,&quot;&quot;)
&amp;IF(ISBLANK(Lawyer__c),&quot;\\nLawyer&quot;,&quot;&quot;)
&amp;IF(ISBLANK(Lawyer_Email__c),&quot;\\nLawyer e-Mail Address&quot;,&quot;&quot;)
&amp;IF(ISBLANK(Attorney_Full_Address__c),&quot;\\nLawyer Full Address&quot;,&quot;&quot;)
&amp;IF(ISBLANK(Primary_Contact__c),&quot;\\nPrimary Contact&quot;,&quot;&quot;)
&amp;IF(ISBLANK(Primary_Contact_Email__c),&quot;\\nPrimary Contact e-Mail Address&quot;,&quot;&quot;) &amp;IF(ISBLANK(Primary_Contact_Street__c)||ISBLANK(Primary_Contact_City__c)||ISBLANK(Primary_Contact_Province__c)||ISBLANK(Primary_Contact_Postal_Code__c),&quot;\\nPrimary Contact Address&quot;,&quot;&quot;)
&amp;IF(AND(ISPICKVAL(Type_of_Loan__c,&quot;Lump-Sum&quot;), ISBLANK(Loan_Amt_minus_Admin_Fee__c)),&quot;\\nFirst Draw Amount&quot;,&quot;&quot;)
&amp;IF(AND(ISPICKVAL(Type_of_Loan__c,&quot;Facility Loan&quot;),OR(ISBLANK(First_Drawdown_Amount__c),ISBLANK(Amount_Paid_to_Borrower__c))),&quot;Amount Paid to Borrower&quot;,&quot;&quot;)
&amp;IF(ISBLANK( Scenario__c ),&quot;\\nProvince of Residency and Type of Loan do not match a valid document&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga Doc Error</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_URL_Doc_Base__c</fullName>
        <formula>&quot;/apex/APXTConga4__Conga_Composer?id=&quot; &amp; Id
&amp; &quot;&amp;TemplateID=&quot; &amp; Scenario__r.DocumentTemplate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga URL Doc Base</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_URL_Doc_Generate__c</fullName>
        <formula>IF(
OR(ISPICKVAL(Type_of_Loan__c,&quot;Treatment Loan&quot;),ISPICKVAL(Type_of_Loan__c,&quot;Treatment Loan 2&quot;))
,Conga_URL_Doc_Base__c &amp; &quot;&amp;DS7=3&amp;DefaultPDF=1&amp;QueryId=[Providers]a0p0L00000BB4vX?pv0=&quot; &amp; Id
,Conga_URL_Doc_Base__c &amp; &quot;&amp;DS7=3&amp;DefaultPDF=1&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga URL Doc Generate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_URL_Doc_Send__c</fullName>
        <formula>Conga_URL_Doc_Base__c
&amp; &quot;&amp;DS7=17&amp;DocuSignVisible=1&amp;QueryStringField=Docusign_Parameters__c&quot;
&amp; &quot;&amp;DocuSignR1Id=&quot; &amp; Primary_Contact__c
&amp; &quot;&amp;DocuSignR1Type=Signer&amp;DocuSignR1Role=Signer+1&amp;DocuSignR1RoutingOrder=1&quot;
&amp; &quot;&amp;DocuSignR2Id=&quot; &amp; Lawyer__c
&amp; &quot;&amp;DocuSignR2Type=Signer&amp;DocuSignR2Role=Signer+2&amp;DocuSignR2RoutingOrder=2&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga URL Doc Send</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Converted_Effective_Date__c</fullName>
        <formula>TEXT(DAY(Effective_Date__c))+ 
CASE(DAY(Effective_Date__c),
1,&quot;st&quot;, 2,&quot;nd&quot;, 3,&quot;rd&quot;, 4,&quot;th&quot;, 5,&quot;th&quot;, 6,&quot;th&quot;, 7,&quot;th&quot;, 8,&quot;th&quot;, 9,&quot;th&quot;, 10,&quot;th&quot;,
11,&quot;th&quot;, 12,&quot;th&quot;, 13,&quot;th&quot;, 14,&quot;th&quot;, 15,&quot;th&quot;, 16,&quot;th&quot;, 17,&quot;th&quot;, 18,&quot;th&quot;, 19,&quot;th&quot;, 20,&quot;th&quot;,
21,&quot;st&quot;, 22,&quot;nd&quot;, 23,&quot;rd&quot;, 24,&quot;th&quot;, 25,&quot;th&quot;, 26,&quot;th&quot;, 27,&quot;th&quot;, 28,&quot;th&quot;, 29,&quot;th&quot;, 30,&quot;th&quot;, 31,&quot;st&quot;, &quot;None&quot;)
 + &quot; day of &quot; +
CASE(MONTH(Effective_Date__c), 
1, &quot;January&quot;, 
2, &quot;February&quot;, 
3, &quot;March&quot;, 
4, &quot;April&quot;, 
5, &quot;May&quot;, 
6, &quot;June&quot;, 
7, &quot;July&quot;, 
8, &quot;August&quot;, 
9, &quot;September&quot;, 
10, &quot;October&quot;, 
11, &quot;November&quot;, 
12, &quot;December&quot;, 
&quot;None&quot;) 
+ &quot;, &quot; + TEXT(YEAR(Effective_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Converted Effective Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count_of_Payments__c</fullName>
        <inlineHelpText>Provides a count of the payments.  Used in validation rules</inlineHelpText>
        <label>Count of Payments</label>
        <summaryFilterItems>
            <field>Drawdown__c.Payment_Method__c</field>
            <operation>equals</operation>
            <value>Payment</value>
        </summaryFilterItems>
        <summaryForeignKey>Drawdown__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Court_File_No_Combined__c</fullName>
        <formula>Name_of_Court__c  + &apos;/&apos; +  Court_File_No__c</formula>
        <label>Court File No. Combined</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Court_File_No__c</fullName>
        <label>Court File No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custommized_Amount__c</fullName>
        <label>Custommized Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DS_Completed__c</fullName>
        <description>Updated by a rollup definition. If this field changes, an email is sent to the Case Manager (assigned to).</description>
        <label>DS Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Applied__c</fullName>
        <label>Date Applied</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Bankruptcy_Search_Done__c</fullName>
        <label>Date Bankruptcy Search Done</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Financing_Statement_Done__c</fullName>
        <label>Date Financing Statement Done</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Financing_Statement_Expires__c</fullName>
        <label>Date Financing Statement Expires</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Loan_Paid_Out__c</fullName>
        <label>Date Loan Paid Out</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Payout_Valid_Until__c</fullName>
        <label>Date Payout Valid Until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Loss__c</fullName>
        <label>Date of Loss</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_advance__c</fullName>
        <label>Date of advance</label>
        <summarizedField>Drawdown__c.Date__c</summarizedField>
        <summaryForeignKey>Drawdown__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Date_of_the_Accident_from_W2L__c</fullName>
        <label>Date of the Accident from W2L</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Outstanding_as_of_To_Date__c</fullName>
        <formula>Reporting_To_Date__c - Date_of_advance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Days between first advance and reporting TO date</inlineHelpText>
        <label>Days Outstanding as of To Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_since_last_activity__c</fullName>
        <formula>Today()-LastActivityDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days since last activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <label>Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Details_of_Accident_Incident__c</fullName>
        <label>Details of Accident / Incident</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Did_ELF_buyout_the_Loan__c</fullName>
        <label>Did ELF buyout the Loan?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Docusign_Parameters_Loan_App__c</fullName>
        <formula>&quot;&amp;DocuSignR1EmailSubject=&quot;&amp;Primary_Contact__r.FirstName&amp;&quot;+Loan+Application&amp;DocuSignR1EmailBlurb=&quot;&amp;Primary_Contact__r.FirstName&amp;&quot;%0A%0AThank+you+for+your+interest+in+a+settlement+loan+with+Easy+Legal+Finance+Inc.,+as+well+as+your+time+on+the+telephone+today.+I+have+attached+your+application+to+this+email.+%0A%0APlease+follow+the+instructions below:+%0A++++-+Provide+two+pieces+of+ID%0A++++-+Review+your+information+in+Section+I+(please+notify+us+of+any+corrections)%0A++++-+Sign+electronically+where+indicated+%0A%0APlease+do+not+hesitate+to+contact+me+if+you+have+any+questions+or+concerns+regards+your+application+process.&quot;</formula>
        <inlineHelpText>Field used to send email blurb to DS silently</inlineHelpText>
        <label>Docusign Parameters Loan App</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Docusign_Parameters__c</fullName>
        <description>This field is used as a parameter in the Send Loan Document button.</description>
        <formula>&quot;&amp;DocuSignR1EmailSubject=&quot;&amp;Name&amp;&quot;+Loan+Documents&amp;DocuSignR1EmailBlurb=&quot;&amp;Name&amp;&quot;,%0A%0AAttached+are+your+Easy+Legal+Finance+loan+documents.+%0A%0APlease+review+the+attached+documents+and+sign+electronically,+where+specified.+As+soon+as+we+receive+your+signed+copies,+they+will+be+forwarded+directly+to+your+legal+representative.+%0A%0AShould+you+have+any+questions+or+concerns,+please+do+not+hesitate+to+contact+us.&amp;DocuSignR2EmailSubject=&quot;&amp;Name&amp;&quot;+Loan+Documents&amp;DocuSignR2EmailBlurb=Your+client+&quot;&amp;Name&amp;&quot;+has+been+approved+for+a+loan+with+Easy+Legal+Finance+Inc.+%0A%0AIn+order+for+us+to+finalize+your+client&apos;s+loan+application,+kindly+review+the+attached+documents+and+sign+electronically,+where+specified.+Your+client&apos;s+signatures+have+already+been+captured.+As+soon+as+you+sign-off+on+these+documents,+the+funds+will+be+transferred+into+your+client&apos;s+bank+account.+%0A%0AShould+you+have+any+questions+or+concerns,+please+do+not+hesitate+to+contact+us.&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used for docusign email messaging.</inlineHelpText>
        <label>Docusign Parameters</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drawdown_Amount__c</fullName>
        <label>Drawdown Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Drawdown_Total__c</fullName>
        <label>Drawdown Total</label>
        <summarizedField>Drawdown__c.Amount__c</summarizedField>
        <summaryForeignKey>Drawdown__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Drawdown_Total_wo_Payment__c</fullName>
        <label>Drawdown Total w/o Payment</label>
        <summarizedField>Drawdown__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Drawdown__c.Payment_Method__c</field>
            <operation>notEqual</operation>
            <value>Payment</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Drawdown__c.Reference_Notes__c</field>
            <operation>notEqual</operation>
            <value>Payment Rejected, Payment Re-processed, Referral Fee</value>
        </summaryFilterItems>
        <summaryForeignKey>Drawdown__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <inlineHelpText>Please enter the Date to be used on Loan Documents</inlineHelpText>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Day_Month__c</fullName>
        <formula>Effective_Day__c &amp;&quot; &quot;&amp; Effective_Month__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Day &amp; Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Day__c</fullName>
        <formula>TEXT(DAY(Effective_Date__c))+ 
CASE(DAY(Effective_Date__c),
1,&quot;st&quot;, 2,&quot;nd&quot;, 3,&quot;rd&quot;, 4,&quot;th&quot;, 5,&quot;th&quot;, 6,&quot;th&quot;, 7,&quot;th&quot;, 8,&quot;th&quot;, 9,&quot;th&quot;, 10,&quot;th&quot;,
11,&quot;th&quot;, 12,&quot;th&quot;, 13,&quot;th&quot;, 14,&quot;th&quot;, 15,&quot;th&quot;, 16,&quot;th&quot;, 17,&quot;th&quot;, 18,&quot;th&quot;, 19,&quot;th&quot;, 20,&quot;th&quot;,
21,&quot;st&quot;, 22,&quot;nd&quot;, 23,&quot;rd&quot;, 24,&quot;th&quot;, 25,&quot;th&quot;, 26,&quot;th&quot;, 27,&quot;th&quot;, 28,&quot;th&quot;, 29,&quot;th&quot;, 30,&quot;th&quot;, 31,&quot;st&quot;, &quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Day</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Month_Day__c</fullName>
        <formula>Effective_Month__c &amp;&quot; &quot;&amp; Effective_Day__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Month &amp; Day</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Month__c</fullName>
        <formula>CASE(MONTH(Effective_Date__c), 
1, &quot;January&quot;, 
2, &quot;February&quot;, 
3, &quot;March&quot;, 
4, &quot;April&quot;, 
5, &quot;May&quot;, 
6, &quot;June&quot;, 
7, &quot;July&quot;, 
8, &quot;August&quot;, 
9, &quot;September&quot;, 
10, &quot;October&quot;, 
11, &quot;November&quot;, 
12, &quot;December&quot;, 
&quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Year__c</fullName>
        <formula>RIGHT( TEXT(YEAR(Effective_Date__c)),2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_of_Deals__c</fullName>
        <inlineHelpText>Please indicate the estimated number of deals this account can refer to us.</inlineHelpText>
        <label>Estimated # of Deals</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Existing_Litigation_Loans__c</fullName>
        <label>Existing Litigation Loans</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fee_Calculation_Method__c</fullName>
        <label>Fee Calculation Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Amount calculated as % of loan amount</fullName>
                </value>
                <value>
                    <fullName>Fixed Amount</fullName>
                    <default>true</default>
                    <label>Fixed Amount</label>
                </value>
                <value>
                    <fullName>Customized Amount</fullName>
                </value>
                <value>
                    <fullName>Amount calculated as % of principal balance</fullName>
                    <isActive>false</isActive>
                    <label>Amount calculated as % of principal balance</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>File_No__c</fullName>
        <formula>Account.AccountNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Account File No</inlineHelpText>
        <label>File No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Drawdown_Amount__c</fullName>
        <label>First Drawdown Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fixed_Amount__c</fullName>
        <label>Fixed Amount</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Fee_Calculation_Method__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>$0</fullName>
                </value>
                <value>
                    <fullName>$375</fullName>
                </value>
                <value>
                    <fullName>$475</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Funding_Address__c</fullName>
        <label>Funding Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Funding_Requested__c</fullName>
        <label>Funding Requested</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Generate_Loan_Doc_Check__c</fullName>
        <formula>IF(
OR(
ISPICKVAL(Type_of_Loan__c,&quot;&quot;),
ISPICKVAL(Account.ProvinceResidency__c,&quot;&quot;),
ISBLANK(Name),
ISBLANK(Amount),
ISBLANK(APR_1__c),
ISBLANK(APR_2__c),
ISBLANK(Style_of_Cause_Description__c),
ISBLANK(Name_of_Court__c),
ISBLANK(Court_File_No__c),
ISBLANK(Admin_Fee__c),
ISBLANK(Law_Firm__c),
ISBLANK(Lawyer__c),
ISBLANK(Attorney_Full_Address__c),
ISBLANK(Primary_Contact__c),
ISBLANK(Primary_Contact_Street__c),
ISBLANK(Primary_Contact_City__c),
ISBLANK(Primary_Contact_Province__c),
ISBLANK(Primary_Contact_Postal_Code__c),
ISBLANK( Scenario__c ),
/*Lump-Sum Exclusive*/
AND(ISPICKVAL(Type_of_Loan__c,&quot;Lump-Sum&quot;), ISBLANK(Loan_Amt_minus_Admin_Fee__c)),
/*Facility Loan Exclusive*/
AND(ISPICKVAL(Type_of_Loan__c,&quot;Facility Loan&quot;),OR(ISBLANK(First_Drawdown_Amount__c),ISBLANK(Amount_Paid_to_Borrower__c)))
)
, False
, True
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Generate Loan Doc Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Have_you_ever_declared_bankruptcy__c</fullName>
        <label>Have you ever declared bankruptcy?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IGD__Collection_Id__c</fullName>
        <label>Collection Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Important_Notes__c</fullName>
        <label>Important Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Interest_Accrued_as_of_To_Date__c</fullName>
        <inlineHelpText>Interest Accrued as of the reporting To Date</inlineHelpText>
        <label>Interest Accrued as of To Date</label>
        <summarizedField>Drawdown__c.Accrued_Interest_as_of_To_Date__c</summarizedField>
        <summaryForeignKey>Drawdown__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Interest_Compounding_Period__c</fullName>
        <label>Interest Compounding Period</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Simple Interest</fullName>
                </value>
                <value>
                    <fullName>Compounding Interest</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interest_Deferral_Period__c</fullName>
        <label>Interest Deferral Period</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>48</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interest_Rate_Formula__c</fullName>
        <formula>IF( ISBLANK( Interest_Rate__c )  , &apos;&apos; , TEXT(Interest_Rate__c*100)&amp;&quot;%&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Interest Rate Formula</label>
        <type>Text</type>
    </fields>
</CustomObject>